Added new simpler agent

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,7 +14,7 @@
 langchain==0.3.18
 langchain-openai==0.3.5
 langchain-community
-langgraph==0.2.72
+langgraph==0.3.30
 langmem==0.0.8
 python-dotenv==1.0.1
 IPython
@@ -31,3 +31,4 @@ console-menu
 requests
 bcrypt
 rospkg
+nest_asyncio
