--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "scripts/CompetitionTemplate"]
 	path = scripts/CompetitionTemplate
-	url = https://github.com/johaq/CompetitionTemplate/tree/main
+	url = https://github.com/johaq/CompetitionTemplate.git
