modified logging function to store inventory data and modified planner examples

--- a/.gitignore
+++ b/.gitignore
@@ -229,5 +229,6 @@ CATKIN_IGNORE
 # Ignore patch code
 roslogging.py
 
-# Ignore evaluation.json
+# Ignore .json
 scripts/evaluation.json
+scripts/inventory.json
